use_undefined_identifier/c2/f_in_check
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/f_in_check/src/moves.c:1325:51: error: use of undeclared identifier 'xmmword_41BBA0'
_mm_add_epi32( _mm_load_si128( ( const __m128i *)&xmmword_41BBA0), v8), 
                                                  ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/f_in_check/src/moves.c:1327:47: error: use of undeclared identifier 'xmmword_41BBB0'
_mm_cmpeq_epi32( _mm_add_epi32( v8, ( __m128i)xmmword_41BBB0), v9))) ) 
                                              ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/f_in_check/src/moves.c:1369:7: error: use of undeclared identifier 'dword_66759C'
v14 = dword_66759C[wking_loc + v13--] == 13; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/f_in_check/src/moves.c:1412:7: error: use of undeclared identifier 'dword_66759C'
v14 = dword_66759C[wking_loc + v13--] == 13; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/f_in_check/src/moves.c:1541:8: error: use of undeclared identifier 'dword_66759C'
v20 = &dword_66759C[wking_loc]; 
       ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/f_in_check/src/moves.c:1642:51: error: use of undeclared identifier 'xmmword_41BBA0'
_mm_add_epi32( _mm_load_si128( ( const __m128i *)&xmmword_41BBA0), v15), 
                                                  ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/f_in_check/src/moves.c:1644:48: error: use of undeclared identifier 'xmmword_41BBB0'
_mm_cmpeq_epi32( _mm_add_epi32( v15, ( __m128i)xmmword_41BBB0), v16))) ) 
                                               ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/f_in_check/src/moves.c:1686:7: error: use of undeclared identifier 'dword_66759C'
v14 = dword_66759C[bking_loc + v18--] == 13; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/f_in_check/src/moves.c:1729:7: error: use of undeclared identifier 'dword_66759C'
v14 = dword_66759C[bking_loc + v18--] == 13; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/f_in_check/src/moves.c:1858:8: error: use of undeclared identifier 'dword_66759C'
v31 = &dword_66759C[bking_loc]; 
       ^
10 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/f_in_check/src/obj/moves.o] Error 1
